// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connectPagination routing getWidgetSearchParameters should add the refinements according to the UI state provided 1`] = `
SearchParameters {
  "disjunctiveFacets": Array [],
  "disjunctiveFacetsRefinements": Object {},
  "facets": Array [],
  "facetsExcludes": Object {},
  "facetsRefinements": Object {},
  "hierarchicalFacets": Array [],
  "hierarchicalFacetsRefinements": Object {},
  "index": "",
  "numericRefinements": Object {},
  "page": 1,
  "tagRefinements": Array [],
}
`;

exports[`connectPagination routing getWidgetSearchParameters should enforce the default value if no value is in the UI State 1`] = `
SearchParameters {
  "disjunctiveFacets": Array [],
  "disjunctiveFacetsRefinements": Object {},
  "facets": Array [],
  "facetsExcludes": Object {},
  "facetsRefinements": Object {},
  "hierarchicalFacets": Array [],
  "hierarchicalFacetsRefinements": Object {},
  "index": "",
  "numericRefinements": Object {},
  "page": 0,
  "tagRefinements": Array [],
}
`;

exports[`connectPagination routing getWidgetState should add an entry equal to the refinement 1`] = `
Object {
  "page": 5,
}
`;
